fix: add scope for scrollbar style

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,16 +23,16 @@ body {
   --scroll-color: #333;
 }
 
-::-webkit-scrollbar {
+.custom-scrollbar::-webkit-scrollbar {
   width: 16px;
 }
 
-::-webkit-scrollbar-track {
+.custom-scrollbar::-webkit-scrollbar-track {
   box-shadow: inset 0 0 10px 10px #FFF;
   border-left: solid var(--gap) transparent;
 }
 
-::-webkit-scrollbar-thumb {
+.custom-scrollbar::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 10px 10px var(--scroll-color, #333);
   border-left: solid var(--gap) transparent;
 }
